@@ -8,23 +8,18 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import uk.gov.hmcts.ecm.common.client.CcdClient;
-import uk.gov.hmcts.ecm.common.model.bulk.BulkData;
-import uk.gov.hmcts.ecm.common.model.bulk.BulkDetails;
-import uk.gov.hmcts.ecm.common.model.bulk.BulkDocumentInfo;
-import uk.gov.hmcts.ecm.common.model.bulk.BulkRequest;
-import uk.gov.hmcts.ecm.common.model.bulk.items.SearchTypeItem;
-import uk.gov.hmcts.ecm.common.model.bulk.types.SearchType;
-import uk.gov.hmcts.ecm.common.model.ccd.*;
+import uk.gov.hmcts.ecm.common.model.ccd.CCDRequest;
+import uk.gov.hmcts.ecm.common.model.ccd.CaseData;
+import uk.gov.hmcts.ecm.common.model.ccd.CaseDetails;
+import uk.gov.hmcts.ecm.common.model.ccd.DocumentInfo;
 import uk.gov.hmcts.ecm.common.model.ccd.types.CorrespondenceScotType;
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.*;
+import uk.gov.hmcts.ecm.common.model.ccd.types.CorrespondenceType;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -33,6 +28,9 @@ import static org.junit.Assert.assertNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLAIMANT;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.MANCHESTER_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
 import static uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException.ERROR_MESSAGE;
 
 @RunWith(SpringJUnit4ClassRunner.class)
@@ -51,9 +49,7 @@ public class DocumentGenerationServiceTest {
     private CaseDetails caseDetails14;
     private CaseDetails caseDetails15;
     private CCDRequest ccdRequest;
-    private BulkRequest bulkRequest;
     private DocumentInfo documentInfo;
-    private BulkDocumentInfo bulkDocumentInfo;
     @Mock
     private CcdClient ccdClient;
 
@@ -74,25 +70,11 @@ public class DocumentGenerationServiceTest {
         CaseData caseData = new CaseData();
         caseDetails.setCaseData(caseData);
         ccdRequest.setCaseDetails(caseDetails);
-        bulkRequest = new BulkRequest();
-        BulkDetails bulkDetails = new BulkDetails();
-        BulkData bulkData = new BulkData();
-        SearchType searchType = new SearchType();
-        searchType.setCaseIDS("1");
-        SearchTypeItem searchTypeItem = new SearchTypeItem();
-        searchTypeItem.setValue(searchType);
-        bulkData.setSearchCollection(new ArrayList<>(Collections.singletonList(searchTypeItem)));
-        bulkDetails.setCaseData(bulkData);
-        bulkDetails.setCaseTypeId(MANCHESTER_DEV_BULK_CASE_TYPE_ID);
-        bulkRequest.setCaseDetails(bulkDetails);
         documentGenerationService = new DocumentGenerationService(tornadoService, ccdClient);
         documentInfo = DocumentInfo.builder().description("resources/exampleV1.json").build();
         documentInfo.setMarkUp("Markup");
         documentInfo.setType("Document");
         documentInfo.setUrl("http://google.com");
-        bulkDocumentInfo = new BulkDocumentInfo();
-        bulkDocumentInfo.setMarkUps(documentInfo.getMarkUp());
-        bulkDocumentInfo.setErrors(new ArrayList<>());
     }
 
     @Test
@@ -121,7 +103,7 @@ public class DocumentGenerationServiceTest {
         CaseData caseData = caseDetails12.getCaseData();
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
-        assertEquals("CLAIMANT : Mr A J Rodriguez", caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+        assertEquals("CLAIMANT : Mr A J Rodriguez", caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -130,7 +112,7 @@ public class DocumentGenerationServiceTest {
         CaseData caseData = caseDetails13.getCaseData();
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Company", caseData.getClaimantTypeOfClaimant());
-        assertEquals("CLAIMANT : Orlando LTD", caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+        assertEquals("CLAIMANT : Orlando LTD", caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(1, caseData.getAddressLabelCollection().size());
     }
 
@@ -140,11 +122,11 @@ public class DocumentGenerationServiceTest {
         assertNull(caseDetails13.getCaseData().getBfActions());
         documentGenerationService.updateBfActions(documentInfo, caseDetails13.getCaseData());
         assertEquals(1, caseDetails13.getCaseData().getBfActions().size());
-        assertEquals(YES, caseDetails13.getCaseData().getBfActions().get(0).getValue().getLetters());
-        assertEquals(LocalDate.now().toString(), caseDetails13.getCaseData().getBfActions().get(0).getValue().getDateEntered());
-        assertEquals(LocalDate.now().plusDays(29).toString(), caseDetails13.getCaseData().getBfActions().get(0).getValue().getBfDate());
-        assertEquals("Claim served", caseDetails13.getCaseData().getBfActions().get(0).getValue().getAllActions());
-        assertEquals("Other action", caseDetails13.getCaseData().getBfActions().get(0).getValue().getCwActions());
+        assertEquals(YES, caseDetails13.getCaseData().getBfActions().getFirst().getValue().getLetters());
+        assertEquals(LocalDate.now().toString(), caseDetails13.getCaseData().getBfActions().getFirst().getValue().getDateEntered());
+        assertEquals(LocalDate.now().plusDays(29).toString(), caseDetails13.getCaseData().getBfActions().getFirst().getValue().getBfDate());
+        assertEquals("Claim served", caseDetails13.getCaseData().getBfActions().getFirst().getValue().getAllActions());
+        assertEquals("Other action", caseDetails13.getCaseData().getBfActions().getFirst().getValue().getCwActions());
 
     }
 
@@ -154,19 +136,19 @@ public class DocumentGenerationServiceTest {
         var c = new CorrespondenceScotType();
         c.setClaimantOrRespondent(CLAIMANT);
         c.setHearingNumber("1");
-        var backUp = caseDetails13.getCaseData().getCorrespondenceType();
         caseDetails13.getCaseData().setCorrespondenceType(null);
         caseDetails13.getCaseData().setCorrespondenceScotType(c);
         caseDetails13.getCaseData().setCorrespondenceScotType(new CorrespondenceScotType());
         assertNull(caseDetails13.getCaseData().getBfActions());
         documentGenerationService.updateBfActions(documentInfo, caseDetails13.getCaseData());
         assertEquals(1, caseDetails13.getCaseData().getBfActions().size());
-        assertEquals(YES, caseDetails13.getCaseData().getBfActions().get(0).getValue().getLetters());
-        assertEquals(LocalDate.now().toString(), caseDetails13.getCaseData().getBfActions().get(0).getValue().getDateEntered());
-        assertEquals(LocalDate.now().plusDays(29).toString(), caseDetails13.getCaseData().getBfActions().get(0).getValue().getBfDate());
-        assertEquals("Other action", caseDetails13.getCaseData().getBfActions().get(0).getValue().getCwActions());
-        assertEquals("Claim served", caseDetails13.getCaseData().getBfActions().get(0).getValue().getAllActions());
+        assertEquals(YES, caseDetails13.getCaseData().getBfActions().getFirst().getValue().getLetters());
+        assertEquals(LocalDate.now().toString(), caseDetails13.getCaseData().getBfActions().getFirst().getValue().getDateEntered());
+        assertEquals(LocalDate.now().plusDays(29).toString(), caseDetails13.getCaseData().getBfActions().getFirst().getValue().getBfDate());
+        assertEquals("Other action", caseDetails13.getCaseData().getBfActions().getFirst().getValue().getCwActions());
+        assertEquals("Claim served", caseDetails13.getCaseData().getBfActions().getFirst().getValue().getAllActions());
         caseDetails13.getCaseData().setCorrespondenceScotType(null);
+        CorrespondenceType backUp = caseDetails13.getCaseData().getCorrespondenceType();
         caseDetails13.getCaseData().setCorrespondenceType(backUp);
     }
 
@@ -175,7 +157,7 @@ public class DocumentGenerationServiceTest {
         CaseData caseData = caseDetails14.getCaseData();
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
-        assertEquals("CLAIMANT : Mr A J Rodriguez", caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+        assertEquals("CLAIMANT : Mr A J Rodriguez", caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -184,7 +166,7 @@ public class DocumentGenerationServiceTest {
         CaseData caseData = caseDetails15.getCaseData();
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
-        assertEquals("CLAIMANT : Mr A J Rodriguez", caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+        assertEquals("CLAIMANT : Mr A J Rodriguez", caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -332,22 +314,6 @@ public class DocumentGenerationServiceTest {
     }
 
     @Test
-    public void clearUserChoicesForMultiplesScotland() {
-        BulkDetails bulkDetails = bulkRequest.getCaseDetails();
-        bulkDetails.setCaseTypeId("Scotland_Multiple");
-        documentGenerationService.clearUserChoicesForMultiples (bulkDetails);
-        assertNull(bulkDetails.getCaseData().getCorrespondenceScotType());
-    }
-
-    @Test
-    public void clearUserChoicesForMultiplesEngland() {
-        BulkDetails bulkDetails = bulkRequest.getCaseDetails();
-        bulkDetails.setCaseTypeId("Not Scotland Multiple");
-        documentGenerationService.clearUserChoicesForMultiples (bulkDetails);
-        assertNull(bulkDetails.getCaseData().getCorrespondenceType());
-    }
-
-    @Test
     public void processDocumentRequest() throws IOException {
         when(tornadoService.documentGeneration(anyString(), any(), anyString(), any(), any(), any())).thenReturn(documentInfo);
         DocumentInfo documentInfo1 = documentGenerationService.processDocumentRequest(ccdRequest, "authToken");
@@ -358,68 +324,6 @@ public class DocumentGenerationServiceTest {
     public void processDocumentRequestException() throws IOException {
         when(tornadoService.documentGeneration(anyString(), any(), anyString(), any(), any(), any())).thenThrow(new InternalException(ERROR_MESSAGE));
         documentGenerationService.processDocumentRequest(ccdRequest, "authToken");
-    }
-
-    @Test
-    public void processBulkDocumentRequest() throws IOException {
-        SubmitEvent submitEvent = new SubmitEvent();
-        submitEvent.setCaseId(1);
-        submitEvent.setCaseData(new CaseData());
-        List<SubmitEvent> submitEvents = Collections.singletonList(submitEvent);
-        when(tornadoService.documentGeneration(anyString(), any(), anyString(), any(), any(), any())).thenReturn(documentInfo);
-        when(ccdClient.retrieveCasesElasticSearch(anyString(), any(), any())).thenReturn(submitEvents);
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkDocumentRequest(bulkRequest, "authToken");
-        assertEquals(bulkDocumentInfo.toString(), bulkDocumentInfo1.toString());
-    }
-
-    @Test
-    public void processBulkDocumentRequestWithErrors() throws IOException {
-        SubmitEvent submitEvent = new SubmitEvent();
-        submitEvent.setCaseId(1);
-        submitEvent.setCaseData(new CaseData());
-        bulkRequest.getCaseDetails().getCaseData().setSearchCollection(null);
-        List<SubmitEvent> submitEvents = Collections.singletonList(submitEvent);
-        when(tornadoService.documentGeneration(anyString(), any(), anyString(), any(), any(), any())).thenReturn(documentInfo);
-        when(ccdClient.retrieveCasesElasticSearch(anyString(), any(), any())).thenReturn(submitEvents);
-
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkDocumentRequest(bulkRequest, "authToken");
-        assertEquals("BulkDocumentInfo(markUps=, errors=[There are not cases searched to " +
-                "generate letters], documentInfo=null)", bulkDocumentInfo1.toString());
-    }
-
-    @Test(expected = Exception.class)
-    public void processBulkDocumentRequestException() throws IOException {
-        SubmitEvent submitEvent = new SubmitEvent();
-        submitEvent.setCaseId(1);
-        submitEvent.setCaseData(new CaseData());
-        List<SubmitEvent> submitEvents = Collections.singletonList(submitEvent);
-        when(tornadoService.documentGeneration(anyString(), any(), anyString(), any(), any(), any())).thenThrow(new InternalException(ERROR_MESSAGE));
-        when(ccdClient.retrieveCasesElasticSearch(anyString(), any(), any())).thenReturn(submitEvents);
-
-        documentGenerationService.processBulkDocumentRequest(bulkRequest, "authToken");
-    }
-
-    @Test
-    public void processBulkScheduleRequest() throws IOException {
-        when(tornadoService.scheduleGeneration(anyString(), any(), anyString())).thenReturn(documentInfo);
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkScheduleRequest(bulkRequest, "authToken");
-        assertEquals("BulkDocumentInfo(markUps=Markup, errors=[], documentInfo=DocumentInfo(type=Document, " +
-                "description=resources/exampleV1.json, url=http://google.com, markUp=Markup))", bulkDocumentInfo1.toString());
-    }
-
-    @Test
-    public void processBulkScheduleRequestWithErrors() throws IOException {
-        bulkRequest.getCaseDetails().getCaseData().setSearchCollection(null);
-        when(tornadoService.scheduleGeneration(anyString(), any(), anyString())).thenReturn(documentInfo);
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkScheduleRequest(bulkRequest, "authToken");
-        assertEquals("BulkDocumentInfo(markUps= , errors=[There are not cases searched to generate schedules], " +
-                "documentInfo=DocumentInfo(type=null, description=null, url=null, markUp=null))", bulkDocumentInfo1.toString());
-    }
-
-    @Test(expected = Exception.class)
-    public void processBulkScheduleRequestException() throws IOException {
-        when(tornadoService.scheduleGeneration(anyString(), any(), anyString())).thenThrow(new InternalException(ERROR_MESSAGE));
-        documentGenerationService.processBulkScheduleRequest(bulkRequest, "authToken");
     }
 
     private CaseDetails generateCaseDetails(String jsonFileName) throws Exception {
